Closed Bug 1771262 Opened 4 years ago Closed 4 years ago

"ASSERTION: Expected Mozilla child widget: '!mContainer'" in Thunderbird

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox101 --- wontfix
firefox102 --- fixed
firefox103 --- fixed

People

(Reporter: darktrojan, Assigned: emilio)

References

Details

(Keywords: assertion)

Attachments

(1 file)

This assertion appears a lot in Thunderbird debug logs (e.g. 123 times in this test log). Clearly we're doing something wrong, Firefox does not appear to have the same problem.

nsMenuPopupFrame initialized the view z-index to a hard-coded INT32_MAX, but
then reset it on restyles based on ZIndex() in SyncFrameViewProperties().

We specify z-index here, so use a consistent z-index all around:

https://searchfox.org/mozilla-central/rev/ace2c59e6c56b2dcba25af1aa8903a5e7f9a5857/toolkit/content/xul.css#255-256

I suspect this is also causing that weird bug about menus going under other
menus on macOS (bug 1763990).

Assignee: nobody → emilio
Status: NEW → ASSIGNED
See Also: → 1763990
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/af9f845e6b2f z-index should apply to menupopup frames. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch

Probably worth uplifting to Beta since 102 is the next ESR which TB uses.

Comment on attachment 9280431 [details]
Bug 1771262 - z-index should apply to menupopup frames. r=mstange,stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Unclear if it has any user visible effect other than avoiding the assertions. Might fix bug 1763990.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: nonr
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very minor consistency improvement / fix.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9280431 - Flags: approval-mozilla-beta?

Comment on attachment 9280431 [details]
Bug 1771262 - z-index should apply to menupopup frames. r=mstange,stransky

Approved for 102 beta 7, thanks.

Attachment #9280431 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

== Change summary for alert #34461 (as of Tue, 14 Jun 2022 15:51:44 GMT) ==

Improvements:

Ratio Test Platform Options Absolute values (old vs new)
7% perf_reftest_singletons nth-index-2.html windows10-64-shippable-qr e10s fission stylo webrender 3.08 -> 2.85
7% perf_reftest_singletons id-getter-6.html linux1804-64-shippable-qr e10s fission stylo webrender 576.82 -> 534.96
7% perf_reftest_singletons id-getter-5.html linux1804-64-shippable-qr e10s fission stylo webrender 578.10 -> 536.83
7% perf_reftest_singletons id-getter-4.html linux1804-64-shippable-qr e10s fission stylo webrender 576.12 -> 535.34
6% perf_reftest_singletons window-named-property-get.html linux1804-64-shippable-qr e10s fission stylo webrender 601.38 -> 564.97
6% perf_reftest_singletons bidi-resolution-1.html linux1804-64-shippable-qr e10s fission stylo webrender 170.51 -> 160.94

For up to date results, see: https://treeherder.mozilla.org/perfherder/alerts?id=34461

Flags: needinfo?(erwinm)

Sorry, I was trying to reply to a needinfo request for bug 1763990.

Flags: needinfo?(erwinm)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: