Bug 1771262 - z-index should apply to menupopup frames. r=stransky

nsMenuPopupFrame initialized the view z-index to a hard-coded INT32_MAX, but
then reset it on restyles based on ZIndex() in SyncFrameViewProperties().

We specify z-index here, so use a consistent z-index all around:

  https://searchfox.org/mozilla-central/rev/ace2c59e6c56b2dcba25af1aa8903a5e7f9a5857/toolkit/content/xul.css#255-256

I suspect this is also causing that weird bug about menus going under other
menus on macOS (bug 1763990).

Differential Revision: https://phabricator.services.mozilla.com/D148762